<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textSize="18sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_devicename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textSize="18sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_deviceaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_connect"
            style="@style/button"
            android:text="@string/connect" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_disconnect"
            style="@style/button"
            android:text="@string/disconnect" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_string"
            android:textSize="18sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_string"
            android:textSize="18sp"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_writehello"
            style="@style/button"
            android:text="@string/hello" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_writeworld"
            style="@style/button"
            android:text="@string/world" />
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />
    <Button
        android:id="@+id/search_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        />
</LinearLayout>
</ScrollView>
</LinearLayout>